package com.example.finanzas.entity;

public enum TipoMov {
    INGRESO, EGRESO, IMPUESTO
}
